--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 body{
     margin: 0;
-    background: linear-gradient(to right, #0a0f2d, #8b8a7f, #e7e3e9);
+    background: linear-gradient(to right, #0a0f2d, #8b8a7f, #060a31);
 }
 .image-container {
     background-color:#001223; 
@@ -11,15 +11,16 @@ body{
     border-top-left-radius: 25px; 
     border-top-right-radius: 25px;
     margin-left: 37%;
-    padding: 25px;
+    padding: 15px;
     margin-top: 20px;
     background-image: radial-gradient(circle closest-side, rgba(255, 255, 255, 0.5) 6%, transparent 7%);
     background-size: 50px 20px; 
 }
 .myimage{
-    width: 100%;
-    height: auto;
+    width: 80%;
+    height: 230px;
     border-radius: 25px;
+    margin-left: 10%;
 }
 .mainbody{
     margin-left: 37%;
